--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -41,7 +41,7 @@
 
 .date-input-container label {
   margin-bottom: 5px;
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .date-input-container input {
@@ -50,4 +50,28 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   width: 150px;
+}
+
+.from-date,
+.to-date {
+  display: flex;
+  margin: 5px;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.label {
+  margin-right: 5px;
+}
+
+.download-button {
+  background-color: #2c3e50;
+}
+
+.download-button:hover {
+  background-color: #8fcaca;
+}
+
+.material-icons:hover {
+  color: black;
 }
