--- a/src/styles/PlaceCard.css
+++ b/src/styles/PlaceCard.css
@@ -1,5 +1,5 @@
 .place-card {
-  background-color: #fff;
+  background-color: #ffff;
   padding: 16px;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -8,23 +8,87 @@
   margin-bottom: 16px;
 }
 
-.place-card:hover {
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+.card {
+  width: 90%;
+  margin-bottom: 15px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: transform 0.3s, box-shadow 0.3s;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.card-media {
+  height: 200px;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 10px 10px 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f5f5;
+}
+
+.card-media-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+}
+
+.place-name {
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.rating {
+  display: flex;
+  font-size: 15px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.chips {
+  display: flex;
+  margin-bottom: 5px;
+  margin-left: 10px;
+  flex-wrap: wrap;
 }
 
 .chip {
-  margin: "5px 5px 5px 0";
+  margin-right: 10px;
+  margin-bottom: 5px;
 }
 
-.subtitle {
-  display: "flex";
-  alignitems: "center";
-  justifycontent: "space-between";
-  margintop: "10px";
+.address,
+.phone {
+  display: flex;
+  align-items: center;
+  color: black;
+  font-size: 14px;
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+.icon {
+  margin-right: 5px;
 }
 
-.spacing {
-  display: "flex";
-  alignitems: "center";
-  justifycontent: "space-between";
+.text {
+  display: flex;
+  margin-right: 5px;
+  word-wrap: break-word;
+}
+
+.card-actions {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
 }
