--- a/src/styles/PlacesList.css
+++ b/src/styles/PlacesList.css
@@ -1,20 +1,57 @@
 .places-list {
   background-color: #f4f4f4;
-  width: 28%; /* Make the list full-width */
-  height: 450px; /* Set a fixed height for the list */
+  width: 28%;
+  height: 450px;
   margin: 20px 0;
-  border-radius: 8px; /* Rounded corners */
+  border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-  overflow-y: auto; /* Make the list scrollable */
-  padding: 16px; /* Add some padding to the container */
+  overflow-y: auto;
+  padding: 16px;
 }
 
-.places-list .grid {
+.title {
+  font-weight: bold;
+  font-size: 35px;
+  color: #34495e;
+  margin-bottom: 10px;
+}
+
+.loading {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dropbox {
+  display: flex;
+}
+.places-dropbox {
+  margin-right: 15px;
+}
+
+.form-control {
+  margin: 16px 0;
+  min-width: 200px;
+}
+
+.input-label {
+  color: #2c3e50;
+}
+
+.select {
+  margin-top: 2px;
+  background-color: #f4f4f4;
+  margin-bottom: 10px;
+}
+
+.places-list .grid-container {
   display: flex;
   flex-direction: column; /* Stack the cards vertically */
   align-items: stretch; /* Make the cards full-width */
 }
 
-.places-list .grid > * {
+.places-list .grid-container > * {
   margin-bottom: 16px; /* Add some spacing between cards */
 }
