--- a/src/styles/PlaceCard.css
+++ b/src/styles/PlaceCard.css
@@ -92,3 +92,11 @@
   justify-content: space-between;
   margin: 10px;
 }
+
+.add-icon {
+  color: white;
+}
+
+.add-icon:hover {
+  color: black;
+}
